# webapp-drive-player

./: .babelrc  .eslintrc  .eslintrc.yaml  .gitignore  .prettierignore  .prettierrc  .prettierrc.yml  Cargo.toml  LICENSE  README.md  TODO.md  biome.json  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  test.js  tsconfig.json  vercel.json  vite.config.ts  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/workflows/: codeql-analysis.yml  compile.yml
api/: refresh.ts  token.ts
css/: common.css  controller.css  drive.css  marquee.css  menu.css  rightmenu.css  style.css
javascript/: index.js  index.js.map
parse_audio/: Cargo.toml
parse_audio/src/: lib.rs
public/api/: token.ts
src/: api.ts  audio.ts  component.tsx  env.d.ts  file.ts  format.ts  index.ts  index.tsx  lib.rs  list.ts  manifest.webmanifest  player.ts  polyfills.ts  type.ts
src/__tests__/: Icon.test.ts  Repeat.test.ts  format.test.ts  formatTime.test.ts
src/audio/: AudioBufferSourcePlayer.ts  AudioDownloader.ts  AudioElementPlayer.ts  AudioElementSourcePlayer.ts  AudioInfo.ts  AudioManager.ts  AudioMediaStreamPlayer.ts  AudioPlayer.ts  BufferLoader.ts  ElementPlayer.ts  IPlayer.ts  Repeat.ts  ShuffleArray.ts  audio.ts  audioInfo.ts  bufferLoader.ts  list.ts  music-metadata.ts  player.ts  repeat.ts  shufflableAudios.ts  shuffleArray.ts
src/audio/crate/: Cargo.toml
src/audio/crate/src/: lib.rs
src/component/: Authorize.tsx  DriveFiles.tsx  Icon.tsx  Menu.tsx  MusicList.tsx  (+3 more)
wasm-sql/: Cargo.toml  LICENSE_MIT
(+367 files in other folders)
