[package]
name = "parse_audio"
version = "0.1.0"
edition = "2021"
description = "wasm parse audio file metadata"
repository = "https://github.com/mikiymk/webapp-drive-player/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.2"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
id3 = "1.1.3"
serde ={ version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
ape = "0.4.0"
lofty = "0.6.3"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true