[package]
name = "parse_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.2"
wasm-bindgen = "0.2.80"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true