[package]
edition = "2021"
name = "wasm-audio-metadata"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
id3 = "1.0.2"
js-sys = "0.3.55"
wasm-bindgen = "0.2.74"
web-sys = {version = "0.3.55", features = ["console"]}
